data/derived/comb/progs/unify/prog3083.ml.out
Characters 61-81:
  else if n > 10 then digitsOfInt (n / 10) :: [n mod 10]
                      ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
